# Warsaw_AI_Hackathon_TrustNexus_backend

./: LICENCE  README.md  pyproject.toml
.github/workflows/: code_quality.yml
backend/: manage.py
backend/backendApp/: admin.py  anonymization.py  apps.py  emails.py  faiss_index.py  llm_summary.py  models.py  serializers.py  test_connection.py  urls.py  views.py
backend/backendApp/llm_analyzer/: test_connection.py
backend/django_backend/: parse_mails.py  read_mails.py  settings.py  urls.py
data/: ATS-HRCLOUD-MVP-001.txt  ATS-HRCLOUD-SCORING.txt  BI-SPRZEDAZ-RETAIL.txt  BIEG-CHARYTATYWNY.txt  BILL-FINAPP-MVP-001.txt  CBT-RETURNS.txt  CRM-SPRZEDAZ-TERENOWA-RAPORTOWANIE.txt  DES-THINKING.txt  DFL-CITYDESK-DESKS.txt  DNR-FUNDRAISING.txt  EDJ-DIARY.txt  ELEARNING-PLATFORM-MVP.txt  ENL-METALPRO-ENERGY.txt  ENL-METALPRO-ENERGY2.txt  EVT-LIVECULTURE-TICKETS.txt  EXP-GLOBETRADE-TRAVEL.txt  FAKTUROWANIE-SAAS-KLIENCI-SUBSKRYPCJE.txt  FLEET-MNGMT-DRIVER-SCORING.txt  FLEET-MNGMT-GPS-MVP-3.txt  FLEET-MNGMT-GPS-MVP.txt  FLEET-MNGMT-GPS-MVP_2.txt  FLEET-MNGMT-SERVICES.txt  GAM-ANALYTICS.txt  GNT-GRANTS.txt  INTEGRAT-PIZZA.txt  JIRA-BANK.txt  JIRA-MAINTENANCE.txt  KANBAN-DEVELOPMENT-PLATFORM.txt  KHB-SZPILEX-INTERNALWIKI.txt  LMS-COURSES.txt  LMS-TRAININGHUB-MVP-001.txt  MED-CZ24-TELEMED.txt  MED-CZ24-TELEMED2.txt  MEDI-COVER.txt  MES-PLANOWANIE-PRODUKCJI.txt  ML-MON-ALPHACLOUD-NEW-DASHBOARD.txt  ML-MON-DATABASE.txt  ML-MON-SZPILEX-LABEL-FEEDBACK.txt  ML-MON-SZPILEX-LATEREPLY-DATAPLATFORM.txt  ML-MON-SZPILEX-PLATFORM.txt  (+57 more)
documents/: Zadanie Hackathon Mail2knowledge.docx
(+8 files in other folders)
