[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "d>=0.2.2",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-nvidia-ai-endpoints>=1.0.0",
    "langchain-openai>=1.1.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
]
